# docker-batch

./: .editorconfig  .env.template  .gitignore  TaskFile.dist.yml  Taskfile.dist.yml  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
docker/python/: Dockerfile
src/dataset/: apply_filter.py  check_normal.py  fillter.py  fillter_params.py  filter.py  make_dataset.py  plot_all_acc.py
src/dataset/check/: __init__.py  acc_x_raw_vs_accuracy.py  acc_x_raw_vs_rotated.py  check_normalize.py
src/dataset/compare_median_fillter/: __init__.py
src/dataset/file_io/: __init__.py  read_evt_file.py  read_rec_file.py  read_watch_file.py
src/dataset/filter/: __init__.py  apply_median_filter.py
src/dataset/raw/: __init__.py  get_acc_all.py  get_gps_acceleration_to_df.py  get_rotation_array.py  speed.py
src/tests/: hello.py
